--- a/StargateApp/StargateTests/Stargate.Tests.csproj
+++ b/StargateApp/StargateTests/Stargate.Tests.csproj
@@ -25,7 +25,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\StargateAPI\StargateAPI.csproj" />
+    <ProjectReference Include="..\StargateAPI\Stargate.API.csproj" />
   </ItemGroup>
 
   <ItemGroup>
